# minimal_py_setup

./: LICENSE  README.rst  setup.cfg  setup.py
