[metadata]
name = package
version = 0.1
summary = summary
description-file =
    README.md
author =  Sriram Madapusi Vasudevan
home-page = https://github.com/TheSriram/minimal_py_setup
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Apache License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    package
